--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.35.4",
-    "@prisma/client": "^7.0.1",
+    "@prisma/client": "^6.18.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.554.0",
+    "mongodb": "^6.21.0",
     "next": "16.0.3",
-    "prisma": "^7.0.1",
+    "prisma": "^6.18.0",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.4.0",
